# somethingsCode

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: acts.yaml
src/: implicit_eq_torch.py  test_jaxadi.py
src/demo_test/: math_utils.py
tests/: test_math_utils.py  test_properties.py
