[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-pytorch-env"
version = "0.1.0"
description = "Python devcontainer with PyTorch, NumPy, Matplotlib, Jupyter, and CasADi"
authors = [
  { name = "Hanamy", email = "rongech@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio",
  "numpy", "matplotlib", "jupyter", "casadi",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.0",
  "coverage[toml]>=7.6",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "ipykernel"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.jupyter]
notebook-dir = "notebooks"



[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/demo_test"]

[tool.coverage.report]
show_missing = true
skip_empty = true